(lang dune 3.17)

(name SecurityML)

(generate_opam_files true)

(source
 (github Scaldev/SecurityML))

(authors "Scaldev scald.dev@gmail.com")

(maintainers "Scaldev scald.dev@gmail.com")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name SecurityML)
 (synopsis "A modest game played in the terminal, inspired by FNaF.")
 (description "TBA")
 (depends ocaml)
 (tags
  ("game" "FNaF" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
